# dwclib

./: .bumpversion.cfg  .flake8  .gitlab-ci.yml  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  reference.rst
dwclib/: __init__.py
dwclib/common/: db.py  meta.py  numerics.py  numerics_query.py  wave_unfold.py  waves.py  waves_query.py
dwclib/dask/: __init__.py  generic.py  numerics.py  numerics_dask.py  numerics_sql.py  waves.py  waves_convert.py  waves_sql.py
dwclib/numerics/: __init__.py  numerics.py
dwclib/patients/: __init__.py  patients.py
dwclib/waves/: __init__.py  wave_unfold.py  waves.py
src/dwclib/: __init__.py
src/dwclib/alerts/: __init__.py  alerts.py
src/dwclib/assets/: alert_ref.csv  rosetta_terms.csv
src/dwclib/common/: db.py  meta.py  numerics.py  wave_unfold.py  waves.py
src/dwclib/dask/: __init__.py  generic.py  numerics.py  numerics_dask.py  numerics_sql.py  waves.py  waves_convert.py  waves_sql.py
src/dwclib/db/: engines.py
src/dwclib/enumerations/: __init__.py  enumerations.py
src/dwclib/numerics/: __init__.py  extract_numerics.py  numerics.py
src/dwclib/patients/: __init__.py  patients.py
src/dwclib/waves/: __init__.py  wave_unfold.py  waves.py
