[tool.poetry]
name = "dwclib"
version = "2022.8.3"
description = "Python wrapper to DataWarehouse Connect"
authors = ["Jona Joachim <jona@joachim.cc>"]
license = "ISC"
readme = "README.md"
repository = "https://framagit.org/jaj/dwclib"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "~1.22"
pandas = "~1.4"
numba = "~0.55"
dask = "^2022"
SQLAlchemy = "~1.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
safety = "^1.10.3"
flake8-bugbear = "^22.4.25"
Sphinx = "^5.0.1"
sphinx-autodoc-typehints = "^1.18.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
